packages/csharp/src/Xberg/NativeMethods.cs


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_clear_embedding_backend")]
    internal static extern int ClearEmbeddingBackend(out IntPtr outError);


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_register_renderer")]
    internal static extern int RegisterRenderer([MarshalAs(UnmanagedType.LPUTF8Str)] string name, IntPtr vtable, IntPtr userData, out IntPtr outError);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_unregister_renderer")]
    internal static extern int UnregisterRenderer([MarshalAs(UnmanagedType.LPUTF8Str)] string name, out IntPtr outError);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_clear_renderer")]
    internal static extern int ClearRenderer(out IntPtr outError);


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_register_reranker_backend")]
    internal static extern int RegisterRerankerBackend([MarshalAs(UnmanagedType.LPUTF8Str)] string name, IntPtr vtable, IntPtr userData, out IntPtr outError);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_unregister_reranker_backend")]
    internal static extern int UnregisterRerankerBackend([MarshalAs(UnmanagedType.LPUTF8Str)] string name, out IntPtr outError);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_clear_reranker_backend")]
    internal static extern int ClearRerankerBackend(out IntPtr outError);

}
